--- a/experiences.html
+++ b/experiences.html
@@ -374,5 +374,10 @@ document.addEventListener('DOMContentLoaded',()=>{
 });
 </script>
 
+  <!-- ────────── FOOTER ────────── -->
+  <footer class="py-8 text-center text-xs text-gray-500 bg-black/90">
+    © 2025 Crowdplzr Inc. All rights reserved.
+  </footer>
+  
 </body>
 </html>
