--- a/experiences.html
+++ b/experiences.html
@@ -195,7 +195,7 @@ document.addEventListener('DOMContentLoaded',()=>{
     },
     "assets/Urgc.mp4": {
       title: "Underground Rebel Gameshow",
-      desc: `<p>While DJs hype the crowd, multiple contestants are randomly chosen from the audience to compete in a game on stage. They are under pressure and their faces are broadcast to the room via webcams. It's an adrenaline fuelled night that brings the silliness of WWE to games that are accessible to all.</p>
+      desc: `<p>While DJs hype the crowd, multiple contestants are randomly chosen from the audience to compete in a game on stage. They are under pressure and their faces are broadcast to the room via webcams. It's an adrenaline fuelled night that brings the silliness of WWE to games that are accessible to all.</p>`
              
     },
     "assets/Ttm.mp4": {
