--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             class="flex flex-col sm:flex-row gap-3 w-full">
 
         <input type="email" name="email" required
-               placeholder="Email address"
+               placeholder="Enter Email for access"
                class="flex-1 rounded px-4 py-3 text-black placeholder-gray-500">
 
         <button type="submit"
                 class="bg-red-600 hover:bg-red-700 rounded px-6 py-3 font-semibold flex items-center justify-center min-w-[9rem]">
-          Get Started ▶
+          Enter Website ▶
         </button>
       </form>
       <!-- /EMAIL FORM -->
