--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </h1>
 
       <p class="text-lg md:text-xl">
-        Enter email to see full website
+        Email Required to Open Website
       </p>
 
       <!-- ------------- EMAIL CAPTURE FORM ---------------- -->
