--- a/experiences.html
+++ b/experiences.html
@@ -85,7 +85,7 @@
 <!-- ───── MARQUEE TEXT SCROLLER ───── -->
 <div class="overflow-hidden whitespace-nowrap border-y border-white/20 bg-black py-2">
   <div class="animate-marquee inline-block text-center text-base md:text-lg font-semibold text-white">
-    DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM  - JUST PRESS PLAY - STANDARD PROMOTER ARRANGEMENT/REV SHARE - ENGAGE PROMOTERS & PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE &nbsp; &nbsp; &nbsp;
+    DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM &nbsp; &nbsp; &nbsp; - JUST PRESS PLAY - &nbsp; &nbsp; &nbsp;STANDARD PROMOTER ARRANGEMENT/REV SHARE - &nbsp; &nbsp; &nbsp;ENGAGE PROMOTERS & PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE &nbsp; &nbsp; &nbsp;
     DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM  - JUST PRESS PLAY - STANDARD PROMOTER ARRANGEMENT/REV SHARE - ENGAGE PROMOTERS & PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE &nbsp; &nbsp; &nbsp;
   </div>
 </div>
