--- a/experiences.html
+++ b/experiences.html
@@ -224,8 +224,7 @@ document.addEventListener('DOMContentLoaded',()=>{
     },
     "assets/Ttm.mp4": {
       title: "Twisted Time Machine",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>A wild ride through time with music from across the ages.</p>`
     },
     "assets/rb.mp4": {
       title: "Rebel Bingo",
@@ -237,8 +236,7 @@ document.addEventListener('DOMContentLoaded',()=>{
     },
     "assets/Lycra.mp4": {
       title: "Lycra 80s Party",
-      desc: `<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod, nisi eu consectetur.</p>
-             <p>Aliquam erat volutpat. Etiam nec velit nec libero pretium pharetra.</p>`
+      desc: `<p>A breathless night of aerobic excercise dancing led by your favourite 80s TV workout stars</p>`
     },
     "assets/SNZF.mp4": {
       title: "Snoozefest Pajama Party",
