--- a/experiences.html
+++ b/experiences.html
@@ -84,17 +84,12 @@
   
 <!-- ───── MARQUEE TEXT SCROLLER ───── -->
 <div class="overflow-hidden whitespace-nowrap border-y border-white/20 bg-black py-2">
-  <div class="animate-marquee inline-block text-center text-base md:text-lg font-semibold text-white">
-    DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM &nbsp; &nbsp; &nbsp; - JUST PRESS PLAY - &nbsp; &nbsp; &nbsp;STANDARD PROMOTER ARRANGEMENT/REV SHARE - &nbsp; &nbsp; &nbsp;ENGAGE PROMOTERS & PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE &nbsp; &nbsp; &nbsp;
-    DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM  - JUST PRESS PLAY - STANDARD PROMOTER ARRANGEMENT/REV SHARE - ENGAGE PROMOTERS & PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE &nbsp; &nbsp; &nbsp;
+  <div class="animate-marquee inline-block text-center text-base md:text-lg text-white"
+       style="font-family: 'Segoe UI', Arial, sans-serif;">
+    - DOWNLOAD SHOW FILES TO YOUR CROWDPLZR SYSTEM &nbsp; &nbsp; &nbsp; - JUST PRESS PLAY - &nbsp; &nbsp; &nbsp;- STANDARD PROMOTER ARRANGEMENT/REV SHARE - &nbsp; &nbsp; &nbsp;- ENGAGE PERFORMERS THROUGH CROWDPLZR OR USE OUR BUILT IN TRAINING GUIDES TO DO ALL IN HOUSE - &nbsp; &nbsp; &nbsp;
   </div>
 </div>
 
-<!-- ───── ROW : Popular Now ───── -->
-<section class="space-y-3 px-6 py-8">
-  <h3 class="text-lg md:text-xl font-bold px-1">Popular Now</h3>
-  <div class="relative min-h-[13rem]">
-    ...
 
 <!-- ───── ROW : Popular Now ───── -->
 <section class="space-y-3 px-6 py-8">
@@ -403,7 +398,7 @@ document.addEventListener('DOMContentLoaded',()=>{
       <img src="logos/acehotel.png" class="h-12 inline-block mx-6" />
       <img src="logos/amg.png" class="h-12 inline-block mx-6" />
       <img src="logos/cosmopolitan.png" class="h-12 inline-block mx-6" />
-      <img src="logos/crowdplzr.png" class="h-12 inline-block mx-6" />
+      <img src="logos/amersham.png" class="h-12 inline-block mx-6" />
       <img src="logos/dice.png" class="h-12 inline-block mx-6" />
       <img src="logos/gastonbury.png" class="h-12 inline-block mx-6" />
       <img src="logos/ibizarocks.png" class="h-12 inline-block mx-6" />
@@ -415,7 +410,7 @@ document.addEventListener('DOMContentLoaded',()=>{
       <img src="logos/acehotel.png" class="h-12 inline-block mx-6" />
       <img src="logos/amg.png" class="h-12 inline-block mx-6" />
       <img src="logos/cosmopolitan.png" class="h-12 inline-block mx-6" />
-      <img src="logos/crowdplzr.png" class="h-12 inline-block mx-6" />
+      <img src="logos/amersham.png" class="h-12 inline-block mx-6" />
       <img src="logos/dice.png" class="h-12 inline-block mx-6" />
       <img src="logos/gastonbury.png" class="h-12 inline-block mx-6" />
       <img src="logos/ibizarocks.png" class="h-12 inline-block mx-6" />
@@ -436,9 +431,128 @@ document.addEventListener('DOMContentLoaded',()=>{
   .animate-scroll {
     display: inline-block;
     white-space: nowrap;
-    animation: scroll 30s linear infinite;
+    animation: scroll 15s linear infinite;
   }
 </style>
+
+<!-- ────────── FAQ SECTION ────────── -->
+<section class="max-w-3xl mx-auto px-6 py-16 space-y-6">
+  <h2 class="text-3xl font-extrabold text-center mb-4">Frequently Asked Questions</h2>
+
+  <!-- FAQ 1 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">Will this work in my venue?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>Easily installed &amp; configured by your own technical team.</p>
+      <p>We don't mess with your set up - which can can be used as normal.</p>
+      <p>This is like an Xbox, but for productions not games</p>
+      <p>Minimum requirements: Video screens (projectors/TVs etc.), lighting desk &amp; PA.</p>
+    </div>
+  </div>
+
+  <!-- FAQ 2 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">Will this work for my production?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>Yes, we capture your creative vision &amp; lock it down so you can be confident of it meeting your high standards whether it's playing in Sydney, Lagos, London or LA </p>
+      <p>Our tools allow you to make regional changes & adjustments</p>
+      <p>You have your own login &amp; are in complete control of your creation</p>
+    </div>
+  </div>
+
+  <!-- FAQ 3 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">Will this benefit my business?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>This software is designed to increase revenue, reduce costs & lower financial risks</p>
+      <p>Revenue: delivering consistent, premium productions to you that are shown to drive footfall &amp; enhance ticket yield &amp; bar spends</p>
+      <p>Costs: Get-in times, set up &amp; venue turnaround times are reduced from hours to minutes</p>
+      <p>Risks: Our network is constantly A/B testing productions &amp; marketing impact of our content; successful shows are repeatable with less reliance on 3rd party scheduling/availability</p>
+      <p>Crowdplzr is designed to make your life EASIER</p>
+    </div>
+  </div>
+
+  <!-- FAQ 4 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">Will this enhance the customer experience?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>Cue-perfect light, video and audio shows once reserved for global tours now run on a one-click preset.</p>
+      <p>Your in house team has more time to demonstrate their expertise &amp; push your existing AV to it's full potential</p>
+    </div>
+  </div>
+
+  <!-- FAQ 5 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">What does it cost?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>There is a venue set up fee and a monthly maintenance fee, then your standard promoter agreement for each production which can be negotiated to share/include costs of this software</p>
+    </div>
+  </div>
+
+  <!-- FAQ 8 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">I’m an independent promoter / producer / performer—what’s in it for me?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>We can take your show global: instant distribution to every subscribing venue.</p>
+    </div>
+  </div>
+
+  <!-- FAQ 9 -->
+  <div class="border-b border-gray-700">
+    <button class="w-full flex justify-between items-center py-4 text-left faq-btn">
+      <span class="font-medium">I’m a major brand, corporate, or label—what’s in it for me?</span>
+      <svg class="faq-icon w-5 h-5 transition-transform" viewBox="0 0 20 20" fill="currentColor">
+        <path fill-rule="evenodd" d="M5 8l5 5 5-5H5z" clip-rule="evenodd" />
+      </svg>
+    </button>
+    <div class="faq-panel hidden pb-4 text-gray-300 space-y-2">
+      <p>Scale on tap. Drop your IP into a nationwide venue network, capture first-party engagement data, and activate local audiences. Networked and hybrid events are baked into the system.</p>
+    </div>
+  </div>
+</section>
+
+<script>
+// FAQ toggle
+document.querySelectorAll('.faq-btn').forEach(btn=>{
+  btn.addEventListener('click',()=>{
+    const panel = btn.nextElementSibling;
+    const icon  = btn.querySelector('.faq-icon');
+    const open  = !panel.classList.toggle('hidden');
+    icon.classList.toggle('rotate-180', open);
+    btn.setAttribute('aria-expanded', open);
+  });
+});
+</script>
 
   <!-- ────────── FOOTER ────────── -->
   <footer class="py-8 text-center text-xs text-gray-500 bg-black/90">
