--- a/labs.html
+++ b/labs.html
@@ -25,7 +25,7 @@
 
   <!-- ────────── HERO ────────── -->
   <section class="relative flex-1 flex flex-col items-center justify-center text-center pt-24 px-6 gap-6">
-    <img src="assets/hardware.png" alt="Crowdplzr Core Server & Controller" class="w-full max-w-3xl aspect-video object-cover rounded-xl shadow-2xl" />
+    <img src="assets/lablight.mp4" alt="Crowdplzr Lights" class="w-full max-w-3xl aspect-video object-cover rounded-xl shadow-2xl" />
     <div class="space-y-3">
       <h2 class="text-4xl md:text-5xl font-extrabold">Crowdplzr Core</h2>
       <p class="text-lg md:text-xl max-w-2xl mx-auto">A turnkey server & tablet that downloads blockbuster‑scale productions straight into your existing AV in one click.</p>
