--- a/labs.html
+++ b/labs.html
@@ -27,7 +27,7 @@
   <section class="relative flex-1 flex flex-col items-center justify-center text-center pt-24 px-6 gap-6">
     <video autoplay loop muted playsinline
   class="w-full max-w-3xl aspect-video object-cover rounded-xl shadow-2xl">
-  <source src="assets/lablight.mp4" type="video/mp4" />
+  <source src="assets/lablights.mp4" type="video/mp4" />
   Your browser does not support the video tag.
 </video>
     <div class="space-y-3">
