--- a/labs.html
+++ b/labs.html
@@ -28,7 +28,7 @@
   <!-- Video background -->
   <video autoplay loop muted playsinline 
     class="absolute inset-0 w-full h-full object-cover z-0">
-    <source src="assets/lablight.mp4" type="video/mp4" />
+    <source src="assets/lablights.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 
