--- a/labs.html
+++ b/labs.html
@@ -37,14 +37,13 @@
 
   <!-- Content on top -->
   <div class="relative z-20 space-y-3 flex flex-col items-center justify-center w-full">
-    <h2 class="text-4xl md:text-5xl font-extrabold">Crowdplzr Core</h2>
-    <p class="text-lg md:text-xl max-w-2xl mx-auto">A turnkey server & tablet that downloads blockbuster‑scale productions straight into your existing AV in one click.</p>
+    <img src="logos/crowdplzr wordmark labs.png" alt="Crowdplzr Labs Logo" class="h-20 md:h-28 mx-auto" />
+    <p class="text-lg md:text-xl max-w-2xl mx-auto">Crowdplzr Labs hosts the best and most exciting creative talent in the US & UK pressure-testing shows built to scale - formats that can be installed and streamed anywhere. </p>
     <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-      <div class="text-3xl font-bold">$17,000 <span class="text-base font-normal">one‑off install</span></div>
-      <div class="text-xl font-semibold">+ $200 / month<span class="text-base font-normal"> maintenance & updates</span></div>
+
     </div>
-    <a href="#book-demo" class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 rounded-md px-8 py-3 font-semibold text-lg">Book Installation ▶</a>
-    <p class="text-sm text-gray-200">Founding Venue pricing • Limited to first 50 installs</p>
+    <a href="#Coming Soon" class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 rounded-md px-8 py-3 font-semibold text-lg">Coming Soon ▶</a>
+    
   </div>
 </section>
 
