--- a/labs.html
+++ b/labs.html
@@ -38,7 +38,7 @@
   <!-- Content on top -->
   <div class="relative z-20 space-y-3 flex flex-col items-center justify-center w-full">
     <img src="logos/crowdplzr wordmark labs.png" alt="Crowdplzr Labs Logo" class="h-20 md:h-28 mx-auto" />
-    <p class="text-lg md:text-xl max-w-2xl mx-auto">Crowdplzr Labs hosts the best and most exciting creative talent in the US & UK pressure-testing shows built to scale - formats that can be installed and streamed anywhere. </p>
+    <p class="text-lg md:text-xl max-w-2xl mx-auto">Hosting the best & most exciting creative talent in the US & UK; pressure-testing shows built to scale - formats that can be installed and streamed anywhere. </p>
     <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
 
     </div>
