--- a/hardware.html
+++ b/hardware.html
@@ -19,6 +19,7 @@
       <a href="index.html" class="hover:text-red-500">Home</a>
       <a href="hardware.html" class="hover:text-red-500 font-semibold text-red-600">Get The System</a>
       <a href="experiences.html" class="hover:text-red-500">Experiences</a>
+      <a href="labs.html" class="hover:text-red-500">Crowdplzr Labs</a>
     </nav>
     <button class="px-3 py-1.5 bg-red-600 rounded text-sm font-semibold hover:bg-red-700">Sign In</button>
   </header>
