--- a/experiences.html
+++ b/experiences.html
@@ -64,7 +64,7 @@
     <nav class="hidden md:flex space-x-6 text-sm font-medium">
       <a href="index.html" class="hover:text-red-500">Home</a>
       <a href="hardware.html" class="hover:text-red-500">Get The System</a>
-      <a href="#" class="hover:text-red-500">My List</a>
+      <a href="labs.html" class="hover:text-red-500">Crowdplzr Labs</a>
     </nav>
     <button class="px-3 py-1.5 bg-red-600 rounded text-sm font-semibold hover:bg-red-700">Sign In</button>
   </header>
