--- a/hardware.html
+++ b/hardware.html
@@ -31,7 +31,7 @@
       <h2 class="text-4xl md:text-5xl font-extrabold">Crowdplzr Core</h2>
       <p class="text-lg md:text-xl max-w-2xl mx-auto">A turnkey server & tablet that downloads blockbuster‑scale productions straight into your existing AV in one click.</p>
       <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-        <div class="text-3xl font-bold">$17,000 <span class="text-base font-normal">one‑off install</span></div>
+        <div class="text-3xl font-bold">$POA <span class="text-base font-normal">one‑off install</span></div>
         <div class="text-xl font-semibold">+ $200 / month<span class="text-base font-normal"> maintenance & updates</span></div>
       </div>
       <a href="#book-demo" class="inline-flex items-center gap-2 bg-red-600 hover:bg-red-700 rounded-md px-8 py-3 font-semibold text-lg">Book Installation ▶</a>
@@ -64,7 +64,7 @@
       <h3 class="text-3xl font-extrabold text-center">Transparent Pricing</h3>
       <div class="grid md:grid-cols-2 gap-8">
         <div class="border border-gray-700 rounded-lg p-6 space-y-3">
-          <h4 class="text-2xl font-bold">Install & Mapping <span class="block text-red-500 mt-1">$17,000</span></h4>
+          <h4 class="text-2xl font-bold">Install & Mapping <span class="block text-red-500 mt-1">$POA</span></h4>
           <ul class="list-disc list-inside text-gray-300 space-y-1 text-sm">
             <li>Server & tablet controller</li>
             <li>On‑site integration with existing AV</li>
