--- a/labs.html
+++ b/labs.html
@@ -72,7 +72,7 @@
       <h3 class="text-3xl font-extrabold text-center">Transparent Pricing</h3>
       <div class="grid md:grid-cols-2 gap-8">
         <div class="border border-gray-700 rounded-lg p-6 space-y-3">
-          <h4 class="text-2xl font-bold">Install & Mapping <span class="block text-red-500 mt-1">$17,000</span></h4>
+          <h4 class="text-2xl font-bold">Install & Mapping <span class="block text-red-500 mt-1">$POA</span></h4>
           <ul class="list-disc list-inside text-gray-300 space-y-1 text-sm">
             <li>Server & tablet controller</li>
             <li>On‑site integration with existing AV</li>
